<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">算你狠商家版</string>
    <string name="share_tip" tools:ignore="MissingTranslation">我在算你狠发现一个不错的店铺，赶快来看看吧~</string>
    <string name="tip_person" tools:ignore="MissingTranslation">自产农副产品，家庭手工业产品，依照法律法规不需要进行工商注册登记的。</string>
    <string name="tip_company" tools:ignore="MissingTranslation">适合公司/企业入驻，提供营业执照等资料即可入驻</string>
    <string name="tip_aer" tools:ignore="MissingTranslation">适合本地个体，连锁店</string>
    <string name="tip_kaihu" tools:ignore="MissingTranslation">说明：是对食品经营许可证的发放、发放条件、发放程序以及与食品卫生许可证的衔接等问题予以明确</string>
    <string name="tab_main1" tools:ignore="MissingTranslation">消息</string>
    <string name="tab_main2" tools:ignore="MissingTranslation">订单</string>
    <string name="tab_main3" tools:ignore="MissingTranslation">商品</string>
    <string name="tab_main4" tools:ignore="MissingTranslation">我的</string>
    <string name="tab_sale1" tools:ignore="MissingTranslation">业务管理</string>
    <string name="tab_sale2" tools:ignore="MissingTranslation">商户列表</string>
    <string name="tab_sale3" tools:ignore="MissingTranslation">拜访记录</string>
    <string name="tab_sale4" tools:ignore="MissingTranslation">我的</string>
    <string name="sku_tip" tools:ignore="MissingTranslation">1、规格名称命名：例如此商品有多种规格（颜色和尺码）：
        \n颜色：红色、黑色、白色\n尺码：S码、M码、
        \n规格名称命名法：红色S码、红色M码、黑色S码，依次类推。
        \n2、规格值：空格填写正整数，例如：填入数字“10”则表示：10=1*10，单位为“/件”。</string>
    <string name="sales_tip" tools:ignore="MissingTranslation">*电话号码必须是算你狠平台的注册用户才能添加成为业务员
    \n*电话号码作为业务员的登录账号</string>
    <string name="sku_tip1" tools:ignore="MissingTranslation">*规格名称命名：例如 苹果1*6/件,草莓味1*12/件,红色S码,红色M码,以此类推。</string>
    <string name="money" tools:ignore="MissingTranslation">¥</string>
</resources>
