<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_app_bg">

    <FrameLayout
        android:id="@+id/main_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/radio_group_button"
        android:layout_width="match_parent"
        android:layout_height="98pt"
        android:background="@color/txt_white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_chat"
            style="@style/RadioGroupButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_sale1"
            android:textSize="24pt"/>

        <RadioButton
            android:id="@+id/radio_order"
            style="@style/RadioGroupButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_sale2"
            android:textSize="24pt"/>

        <RadioButton
            android:id="@+id/radio_store"
            style="@style/RadioGroupButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_sale3"
            android:textSize="24pt"/>
        <RadioButton
            android:id="@+id/radio_home"
            style="@style/RadioGroupButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_sale4"
            android:textSize="24pt"/>
    </RadioGroup>
</LinearLayout>
