<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_app_bg"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/main_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:paddingTop="18pt"
            android:background="@color/white"
            android:id="@+id/ll_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/iv_01"
                android:layout_width="48pt"
                android:layout_height="48pt"
                android:background="@drawable/store0"
                />

            <TextView
                android:id="@+id/tv_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_main3"
                android:textSize="@dimen/txtSize_24"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:background="@color/white"
            android:id="@+id/ll_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/rl_02"
                android:layout_weight="1"
                android:layout_width="120pt"
                android:layout_height="wrap_content">
                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_num2"
                    android:layout_marginTop="5pt"
                    android:layout_marginLeft="80pt"
                    android:gravity="center"
                    android:layout_width="30pt"
                    android:layout_height="30pt"
                    android:textSize="15pt"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_soild_red_40_bg"
                    />
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/iv_02"
                    android:layout_width="48pt"
                    android:layout_height="48pt"
                    android:background="@drawable/order0"
                    />

            </RelativeLayout>
            <TextView
                android:id="@+id/tv_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_main2"
                android:textSize="@dimen/txtSize_24"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:background="@color/white"
            android:id="@+id/ll_03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/rl_04"
                android:layout_weight="1"
                android:layout_width="120pt"
                android:layout_height="wrap_content">
                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_num"
                    android:layout_marginTop="5pt"
                    android:layout_marginLeft="80pt"
                    android:gravity="center"
                    android:layout_width="30pt"
                    android:layout_height="30pt"
                    android:textSize="15pt"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_soild_red_40_bg"
                    />
            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/iv_04"
                android:layout_width="48pt"
                android:layout_height="48pt"
                android:background="@drawable/chat0"
                />

            </RelativeLayout>
            <TextView
                android:id="@+id/tv_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_main1"
                android:textSize="@dimen/txtSize_24"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="18pt"
            android:background="@color/white"
            android:id="@+id/ll_04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            >

            <ImageView

                android:id="@+id/iv_05"
                android:layout_width="48pt"
                android:layout_height="48pt"
                android:background="@drawable/home0"
                />

            <TextView
                android:id="@+id/tv_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_main4"
                android:textSize="@dimen/txtSize_24"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>